--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">كوووورة يلا شووت</string>
-    <string name="title_activity_main">كوووورة يلا شووت</string>
+    <string name="app_name">كوووورة</string>
+    <string name="title_activity_main">كوووورة</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
